belajar pake section data dan inverted section

--- a/templates/person.mustache
+++ b/templates/person.mustache
@@ -7,7 +7,10 @@
 </head>
 <body>
     {{# person }}
-        Hello Person {{ name }}
+        Hello Person {{ name }}!
+    {{/ person }}
+    {{^ person }}
+        Hello Guest
     {{/ person }}
 </body>
 </html>
